# manip2dof_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: Manip2DofSolution.msg
srv/: Manip2DofProperties.srv
